--- a/littlechange1.html
+++ b/littlechange1.html
@@ -108,7 +108,7 @@
         <div class="col container css2">
           <h1>About Us </h1><br>
           <p style="text-align:center"> At Shah Ghouse, we provide an extensive and lavish menu <br> spread that is a
-            discerning foodie’s delight.
+            discerning foodies delight.
             Starting with our <br> very famous Zafrani Mutton Biryani, Shikampur Kebabs, Chicken 65 & <br> more. The
             food is cooked with passion, traditional herbs and <br> spices passed down the centuries, redolent with
             aromas that <br> tingle the taste buds. The flavors and the tastes make you <br> come back for more and
